2003-04-17  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/list.h :

	  - Added a length macro that returns the length of the list ptr, 0
	    if pointer is NULL.

	* common/vlad.h :

	  - Added string constants to centralise symbols.

	  - Added numeric lengths for string constants.

	  - Added conversion macros to convert int/bool to its boolean string
	    eqivalent.

	* kb/kb.cpp :

	  - Added inheritance rules code.

	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - Cleanup.

	  - Added functions to register rules of different formats.

2003-04-16  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.cpp :
	* kb/wrapper.cpp :
	* kb/wrapper.h :

	  - Now atoms are registered in smodels.

	* common/vlad.h :

	  - Added a result macro to convert numeric codes to string.

	* kb/kb.cpp :
	* kb/kb.h :
	* parser/parser.y :

	  - Added a skeletal evaluate_query() function that calls on smodels.

	* common/vlad.h :
	* main/vlad.cpp :
	* parser/parser.h :
	* parser/parser.y :

	  - Moved yyerror() and yywarn() back to parser.y where it makes more
	    sense.

	  - Added modes: NLP and SMODELS. One generates a normal logic program
	    and the other links with the smodels library to evaluate a query.

	* common/Makefile.in :
	* main/Makefile.in :
	* parser/Makefile.in :

	  - Added OBJECTS variable.

	  - Now vlad is linked against smodels (if configured with
	    --with-smodels).

	* kb/wrapper.h :
	* kb/wrapper.cpp :

	  - Added smodels wrapper class.

	* configure :
	* configure.ac :

	  - Fixed relative/absolute path problem with --with-smodels.

	  - Smodels path now included in C/CXXFLAGS and LDFLAGS.

2003-04-15  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* README :

	  - Updated readme.

	* configure :
	* configure.ac :

	  - Fixed smodels checking mechanism.

2003-04-14  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* configure :
	* configure.ac :
	* common/Makefile.in :
	* common/list.cpp :
	* common/numberlist.cpp :
	* common/numberlist.h :